A3 final commit